--- a/dashboard/dashboard.css
+++ b/dashboard/dashboard.css
@@ -19,7 +19,7 @@
     height: 55px;
     width: 220px;
     border-radius: 5px;
-    background-color: red;
+    background-color: rgb(219, 0, 0);
     color: white;
     display: flex;
     flex-direction: row;
@@ -69,7 +69,7 @@
     margin: 10px;
 }
 
-.decline {
+.reject {
     width: 40px;
     height: 40px;
     margin: 15px 20px auto 15px;
@@ -98,5 +98,23 @@ h2 {
     width: 120px;
     height: 40px;
     margin: 15px 20px auto auto;
-    background-color: red;
+    background-color: rgb(207, 0, 0);
+    color: white;
+    font-size: medium;
+    font-weight: bold;
+}
+
+.btnCall {
+    width: 120px;
+    height: 40px;
+    margin: 15px 20px auto 10px;
+    background-color: #0078bd;
+    color: white;
+    font-size: medium;
+    font-weight: bold;
+}
+
+#txtPhoneNumber {
+    font-size: 50px;
+    font-weight: bold;
 }
